--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <title>Marco Giuseppe de Pinto | Website</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'articles/css/styles.css' %}" />
-  <link rel="font" href="{% static 'articles/fonts/Andis-Light.ttf' %}">
+  <link rel="stylesheet" type="text/css" href="static/css/styles.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -41,7 +39,7 @@
 </head>
 <body style="background-color:#e7f1f5">
 <div class="jumbotron text-center" id="myJumbotron" style="background-color:#d2edf8">
-  <img src="{% static "articles/images/Image.jpeg" %}" class="img-circle img-responsive" alt="Pic" width="170" height="170" id="myImg">
+  <img src="static/images/VAL_7302.JPG" class="img-responsive" alt="Pic" width="170" height="170" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
   <p>Python Developer - Business Analyst</p>
   <p>
@@ -81,7 +79,7 @@
       <h3>I paesi con cui ho lavorato fino ad ora</h3>
     </div>
     <div class="col-sm-12" id="mapPic">
-      <img src="{% static "articles/images/amCharts.jpg" %}" class="img-responsive" alt="Pic">
+      <img src="static/images/amCharts.jpg" class="img-responsive" alt="Pic">
     </div>
   </div>
 </div>
