--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   </script>
 </head>
 <body style="background-color:#e7f1f5">
-<div class="jumbotron text-center" id="myJumbotron" style="background-color:#d2edf8">
+<div class="jumbotron text-center" id="myJumbotron" style="background-color:white">
   <img src="assets/images/VAL_7302.JPG" class="img-responsive" alt="Pic" width="170" height="170" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
-  <p>Python Developer - Business Analyst</p>
+  <p>Business Analyst and Customer Service at Wolters Kluwer</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
@@ -53,33 +53,21 @@
 <div class="container" id="quotesContainer">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Chi sono</h3>
-      <p>"Lo scopo dell’apprendimento è la crescita, e la nostra mente, a differenza del nostro corpo, può continuare a crescere fintanto che continuiamo a vivere."</p>
-      <p>Mortimer J. Adler</p>
+      <h3>About me</h3>
+      <p>"Develop a passion for learning. If you do, you will never cease to grow."</p>
+      <p>Anthony J. D'Angelo</p>
       <p><a type="button" class="btn btn-default" href="#aboutMeDescription" role="button">Leggi di più »</a></p>
     </div>
     <div class="col-sm-4">
-      <h3>Perchè programmo</h3>
-      <p>"Per gli hacker un computer significa anche intrattenimento. Non i giochi, non le belle immagini sulla Rete. Il computer in sé è intrattenimento."</p>
-      <p>Linus Torvalds</p>
+      <h3>Professional Skills</h3>
+      <p>“It is better to build than to break.”</p>
+      <p>Lailah Gifty Akita</p>
       <p><a type="button" class="btn btn-default" href="#codingContainer" role="button">Leggi di più »</a></p>
     </div>
     <div class="col-sm-4" >
-      <h3>Cosa ho realizzato</h3>
-      <p>In ogni strada di questo paese c'è un nessuno che sogna di diventare qualcuno. È un uomo dimenticato e solitario che deve disperatamente provare di essere vivo.</p>
-      <p>Robert De Niro in Taxi driver, 1976.</p>
+      <h3>Projects</h3>
+      <p>"Every great developer you know got there by solving problems they were unqualified to solve until they actually did it."</p>
       <p><a type="button" class="btn btn-default" href="#projectsContainer" role="button">Leggi di più »</a></p>
-    </div>
-  </div>
-</div>
-
-<div class="container" id="mapContainer">
-  <div class="row">
-    <div class="col-sm-12" id="mapDesc">
-      <h3>I paesi con cui ho lavorato fino ad ora</h3>
-    </div>
-    <div class="col-sm-12" id="mapPic">
-      <img src="assets/images/amCharts.jpg" class="img-responsive" alt="Pic">
     </div>
   </div>
 </div>
@@ -87,21 +75,14 @@
 <div class="container" id="infoContainer">
   <div class="row">
     <div class="col-sm-2" id="aboutMeDescription">
-      <h4>Su di me</h4>
+      <h4>About me</h4>
     </div>
     <div class="col-sm-10" id="myStory">
-      <p>Avete presente quella persona che un pò tutti abbiamo in famiglia e che chiamiamo quando c'è un problema al PC?
-         Se foste membri della mia famiglia, chiamereste me.<br>
-         Cresciuto a pane e computer ma con l'idea di diventare avvocato e quindi, dopo il liceo, ho studiato Giurisprudenza.<br>
-         Nonostante questo, non sono mai riuscito a staccarmi da ciò che amavo di più: ho cominciato a fare supporto tecnico a 22 anni e lo faccio ancora oggi.<br>
-         Laureato nel 2014, sono entrato in uno studio legale: il mio Dominus (per chi non fosse del mestiere, i praticanti chiamano così l'avvocato che gli insegna come fare il suo splendido mestiere)
-         amava ripetermi che avevo sbagliato tutto. E aveva ragione.<br>
-         A 26 anni ho cominciato a lavorare in Wolters Kluwer, divisione software per avvocati, sempre nel supporto tecnico.<br>
-         Lavorando a contatto con gli sviluppatori, sono rimasto affascinato da come riuscissero a creare cose meravigliose semplicemente scrivendo.<br>
-         E ho iniziato a farlo anche io.<br>
-         Ho studiato SQL di notte, dopo il lavoro, usando risorse come <a href ="http://sqlzoo.net/">SQLzoo</a> per riuscire a capire meglio il funzionamento dei software su cui facevo assistenza.
-         Dopo qualche mese, ho creato <a href="www.gabriellacipriani.it">il mio primo sito web</a> con Wordpress.<br>
-         Ho cominciato a lavorare come Business Analyst su progetti strategici. Poi è arrivato Python.<br>
+      <p>Experienced Business Analyst with 2+ years of experience in data, requirements and documents analysis, 7+ years in Customer Service and 2+ years in Python development. <br></p>
+      <p>Able to operate at both business and technical level in fast paced environments, with solid communication and presentation skills and a background in large projects working with people from very diverse backgrounds.<br></p>
+      <p>Demonstrated strengths in project management (working on a project with 7 countries involved since 2016) with the ability to cultivate relationships with clients and stakeholders at all levels.<br></p>
+      <p>My career goal is to have fun in what I do on a daily basis, enjoying the time spent with the team while having a chance to contribute to something great and unique.<br></p>
+      <p>Passionate about machine learning, I have already applied the following techniques to make predictions for real-world problems: Linear Regression, Logistic Regression, K-Nearest Neighbors, Decision Tree, Random Forest, LightGBM, XGBoost, SVM, K-Means Clustering, PCA.<br>
       </p>
     </div>
   </div>
@@ -110,29 +91,15 @@
 <div class="container" id="whyContainer">
   <div class="row">
     <div class="col-sm-2" id="whyCoding">
-      <h4>Perchè programmo</h4>
+      <h4>Professional and Personal Skills</h4>
     </div>
     <div class="col-sm-10" id="whyCodingDescription">
-      <p>Programmare è meraviglioso: consente a chiunque di creare qualcosa partendo dal nulla e di poter risolvere problemi semplici o complessi della vita di tutti i giorni.
-         <a href="https://github.com/marcogdepinto/LifeCounter">La mia prima applicazione</a> è nata così, per risolvere un problema sorto parlando con gli amici davanti ad una tazza di caffè.<br>
-        Ho poi cominciato a usare quello che avevo imparato per <a href="https://github.com/marcogdepinto/PythonScripts">automatizzare alcune operazioni svolte per lavoro.</a>
-      </p>
-    </div>
-  </div>
-</div>
-
-<div class="container" id="codingContainer">
-  <div class="row">
-    <div class="col-sm-2" id="aboutCodingDescription">
-      <h4>Perchè ho scelto Python e come ho imparato</h4>
-    </div>
-    <div class="col-sm-10" id="codingStory">
-      <p>La scelta di Python è stata naturale: mi sono rivolto al linguaggio con la sintassi più simile all'Inglese.<br>
-         Grazie a <a href="https://www.codecademy.com/">Codecademy</a> ho cominciato, nel 2014, ad apprenderne le basi.<br>
-         Da Codecademy ai MOOCs (<a href="https://it.wikipedia.org/wiki/MOOC"> Massive Online Courses</a>) il passo è stato breve: ho seguito con passione una serie di corsi su Python
-         a cura del prof. Charles Severance, Michigan University, offerti gratuitamente da <a href="https://www.coursera.org/">Coursera</a>.<br>
-         I corsi sopra fanno oggi parte della <a href=https://www.coursera.org/specializations/python>Specializzazione Python</a>
-         che vi consiglio, qualora stiate pensato anche voi come cominciare a creare qualcosa.
+      <p>Professional skills:<br>
+         Business process consulting, process analysis and improvement, exploratory data analysis, business analysis, communication, negotiation, strategic thinking, product design, project management.<br></p>
+      <p>Technical skills:<br>
+         SQL, Python, Excel, Scikit-Learn, Pandas, Matplotlib, Numpy, Pandas, Seaborn, Jupyter Notebook, Django, Kivy, MacOS, Linux, Ubuntu, Git, Pycharm.<br></p>
+      <p>Languages:<br>
+         Italian (native), English (fluent, IELTS Academic 7 - 2015), German and Spanish (basic knowledge).<br></p>
       </p>
     </div>
   </div>
@@ -141,30 +108,38 @@
 <div class="container" id="projectsContainer">
   <div class="row">
     <div class="col-sm-2" id="projectsDescription">
-      <h4>Cosa ho realizzato e su cosa sto lavorando</h4>
+      <h4>Projects</h4>
     </div>
     <div class="col-sm-10" id="projectsStory">
-      <p>
-        Il sito web che state guardando è il mio ultimo progetto, ma potete vederne molti altri dando un'occhiata al mio <a href="https://github.com/marcogdepinto">Github</a>.<br>
-        Per gli interessati, il sito è realizzando utilizzando Python (Django), un pizzico di javascript e (ovviamente) HTML e CSS.<br>
-        In questo momento, oltre a sviluppare le mie conoscenze in materia di sviluppo web, sto studiando analisi di dati e machine learning: in particolare
-        sto seguendo <a href="https://www.coursera.org/learn/machine-learning">il corso di Andrew Ng (Stanford University) su Coursera</a> e leggendo una serie di libri
-        tra cui <a href="https://www.packtpub.com/big-data-and-business-intelligence/python-machine-learning-second-edition">"Python Machine Learning - Second Edition"
-        a cura di Sebastian Raschka e Vahid Mirjalili</a> e <a href="https://leanpub.com/learningthepandaslibrary">"Learning the Pandas Library" di Matt Harrison</a>.
-      </p>
+      <p><a href="https://www.kaggle.com/marcogdepinto/titanic-with-python-first-competition">Analysis of the Titanic dataset actually top 4% in the Kaggle leaderboard</a></p>
+      <p><a href="https://github.com/marcogdepinto/Personal-Website">Personal website realized using Python (Django), Bootstrap and some Javascript.</a></p>
+      <p><a href="https://www.kaggle.com/marcogdepinto/italian-public-employees-absence-rate-analysis">An analysis of absence percentage of employees of ARTI (Apulian Innovation Agency) made with Python (Pandas, Matplotlib, Seaborn)</a></p>
+      <p><a href="https://github.com/marcogdepinto/PasswordManager">A password manager built using Python, MySqlDB and Kivy.</a></p>
+      <p><a href="https://github.com/marcogdepinto/LifeCounter/blob/master/main.py">A basic life counter for Magic the Gathering developed in Python using the Kivy framework.</a></p>
     </div>
   </div>
 </div>
 
-<div class="footer">
+<div class="container" id="mapContainer">
+  <div class="row">
+    <div class="col-sm-12" id="mapDesc">
+      <h3>Countries I have worked with</h3>
+    </div>
+    <div class="col-sm-12" id="mapPic">
+      <img src="assets/images/amCharts.jpg" class="img-responsive" alt="Pic">
+    </div>
+  </div>
+</div>
+
+<div class="footer" style="background-color:white">
   <div class="jumbotron text-center">
     <p>
-      <a href="{% url 'index' %}" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
-      <a href="#myStory" title="Su di me">&nbsp;&nbsp;Su di me&nbsp;&nbsp;</a>
-      <a href="#" title="CV">&nbsp;&nbsp;Curriculum&nbsp;&nbsp;</a>
-      <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Progetti&nbsp;&nbsp;</a>
-      <a href="#" title="Contatti">&nbsp;&nbsp;Contatti&nbsp;&nbsp;</a>
-      <h6> © 2018 Marco Giuseppe de Pinto. Tutti i diritti riservati. </h6>
+      <a href="#myJumbotron" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
+      <a href="#myStory" title="About me">&nbsp;&nbsp;Su di me&nbsp;&nbsp;</a>
+      <a href="https://drive.google.com/open?id=1vsqTnspJ4D4MkQ-SgjqFcAT56OknvfaK" title="CV">&nbsp;&nbsp;My Resume&nbsp;&nbsp;</a>
+      <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
+      <a href="#" title="Contatti">&nbsp;&nbsp;Contacts&nbsp;&nbsp;</a>
+      <h6> © 2018 Marco Giuseppe de Pinto. All rights reserved. </h6>
     </p>
   </div>
 </div>
