--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <div class="col-sm-4">
       <h3>Professional Skills</h3>
       <p>“It is better to build than to break.”</p>
+      <p></p>
       <p>Lailah Gifty Akita</p>
       <p><a type="button" class="btn btn-default" href="#codingContainer" role="button">Leggi di più »</a></p>
     </div>
@@ -111,11 +112,11 @@
       <h4>Projects</h4>
     </div>
     <div class="col-sm-10" id="projectsStory">
-      <p><a href="https://www.kaggle.com/marcogdepinto/titanic-with-python-first-competition">Analysis of the Titanic dataset actually top 4% in the Kaggle leaderboard</a></p>
-      <p><a href="https://github.com/marcogdepinto/Personal-Website">Personal website realized using Python (Django), Bootstrap and some Javascript.</a></p>
-      <p><a href="https://www.kaggle.com/marcogdepinto/italian-public-employees-absence-rate-analysis">An analysis of absence percentage of employees of ARTI (Apulian Innovation Agency) made with Python (Pandas, Matplotlib, Seaborn)</a></p>
-      <p><a href="https://github.com/marcogdepinto/PasswordManager">A password manager built using Python, MySqlDB and Kivy.</a></p>
-      <p><a href="https://github.com/marcogdepinto/LifeCounter/blob/master/main.py">A basic life counter for Magic the Gathering developed in Python using the Kivy framework.</a></p>
+      <p><a href="https://www.kaggle.com/marcogdepinto/titanic-with-python-first-competition">- Analysis of the Titanic dataset actually top 4% in the Kaggle leaderboard</a></p>
+      <p><a href="https://github.com/marcogdepinto/Personal-Website">- Personal website realized using Python (Django), Bootstrap and some Javascript.</a></p>
+      <p><a href="https://www.kaggle.com/marcogdepinto/italian-public-employees-absence-rate-analysis">- An analysis of absence percentage of employees of ARTI (Apulian Innovation Agency) made with Python (Pandas, Matplotlib, Seaborn)</a></p>
+      <p><a href="https://github.com/marcogdepinto/PasswordManager">- A password manager built using Python, MySqlDB and Kivy.</a></p>
+      <p><a href="https://github.com/marcogdepinto/LifeCounter/blob/master/main.py">- A basic life counter for Magic the Gathering developed in Python using the Kivy framework.</a></p>
     </div>
   </div>
 </div>
@@ -135,7 +136,7 @@
   <div class="jumbotron text-center">
     <p>
       <a href="#myJumbotron" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
-      <a href="#myStory" title="About me">&nbsp;&nbsp;Su di me&nbsp;&nbsp;</a>
+      <a href="#myStory" title="About me">&nbsp;&nbsp;About me&nbsp;&nbsp;</a>
       <a href="https://drive.google.com/open?id=1vsqTnspJ4D4MkQ-SgjqFcAT56OknvfaK" title="CV">&nbsp;&nbsp;My Resume&nbsp;&nbsp;</a>
       <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
       <a href="#" title="Contatti">&nbsp;&nbsp;Contacts&nbsp;&nbsp;</a>
