--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
       <h4>Projects</h4>
     </div>
     <div class="col-sm-10" id="projectsStory">
-      <p><a href="https://www.kaggle.com/marcogdepinto/titanic-with-python-first-competition">- Analysis of the Titanic dataset actually top 4% in the Kaggle leaderboard</a></p>
+      <p><a href="https://www.kaggle.com/marcogdepinto/titanic-with-python-first-competition">- Analysis of the Titanic dataset (actually top 4% in the Kaggle leaderboard).</a></p>
       <p><a href="https://github.com/marcogdepinto/Personal-Website">- Personal website realized using Python (Django), Bootstrap and some Javascript.</a></p>
-      <p><a href="https://www.kaggle.com/marcogdepinto/italian-public-employees-absence-rate-analysis">- An analysis of absence percentage of employees of ARTI (Apulian Innovation Agency) made with Python (Pandas, Matplotlib, Seaborn)</a></p>
+      <p><a href="https://www.kaggle.com/marcogdepinto/italian-public-employees-absence-rate-analysis">- An analysis of absence percentage of employees of ARTI (Apulian Innovation Agency) made with Python (Pandas, Matplotlib, Seaborn).</a></p>
       <p><a href="https://github.com/marcogdepinto/PasswordManager">- A password manager built using Python, MySqlDB and Kivy.</a></p>
       <p><a href="https://github.com/marcogdepinto/LifeCounter/blob/master/main.py">- A basic life counter for Magic the Gathering developed in Python using the Kivy framework.</a></p>
     </div>
