--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
       <h3>About me</h3>
       <p>"Develop a passion for learning. If you do, you will never cease to grow."</p>
       <p>Anthony J. D'Angelo</p>
-      <p><a type="button" class="btn btn-default" href="#aboutMeDescription" role="button">Leggi di più »</a></p>
+      <p><a type="button" class="btn btn-default" href="#aboutMeDescription" role="button">Read more »</a></p>
     </div>
     <div class="col-sm-4">
       <h3>Professional Skills</h3>
       <p>“It is better to build than to break.”</p>
       <p></p>
       <p>Lailah Gifty Akita</p>
-      <p><a type="button" class="btn btn-default" href="#codingContainer" role="button">Leggi di più »</a></p>
+      <p><a type="button" class="btn btn-default" href="#codingContainer" role="button">Read more »</a></p>
     </div>
     <div class="col-sm-4" >
       <h3>Projects</h3>
       <p>"Every great developer you know got there by solving problems they were unqualified to solve until they actually did it."</p>
-      <p><a type="button" class="btn btn-default" href="#projectsContainer" role="button">Leggi di più »</a></p>
+      <p><a type="button" class="btn btn-default" href="#projectsContainer" role="button">Read more »</a></p>
     </div>
   </div>
 </div>
