--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
       <a href="#myJumbotron" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
       <a href="#myStory" title="About me">&nbsp;&nbsp;About me&nbsp;&nbsp;</a>
       <a href="https://drive.google.com/open?id=1vsqTnspJ4D4MkQ-SgjqFcAT56OknvfaK" title="CV">&nbsp;&nbsp;My Resume&nbsp;&nbsp;</a>
+      <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;My Kaggle Profile&nbsp;&nbsp;</a>
       <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
       <a href="#" title="Contatti">&nbsp;&nbsp;Contacts&nbsp;&nbsp;</a>
       <h6> © 2018 Marco Giuseppe de Pinto. All rights reserved. </h6>
@@ -146,3 +147,5 @@
 </div>
 </body>
 </html>
+
+https://www.kaggle.com/marcogdepinto
