--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <h3>Countries I have worked with</h3>
     </div>
     <div class="col-sm-12" id="mapPic">
-      <img src="assets/images/amCharts.png" class="img-responsive" alt="Pic">
+      <img src="assets/images/amCharts1.png" class="img-responsive" alt="Pic">
     </div>
   </div>
 </div>
