--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h4>About me</h4>
     </div>
     <div class="col-sm-10" id="myStory">
-      <p>Leading complex digital transformation projects (500+ users in 8 EMEA – LATAM countries) to provide strategic perspective, business insights and solutions to customers from the initial ideation phase through final execution.<br></p>
+      <p>Leading complex digital transformation projects (500+ users in 8 EMEA – LATAM countries), providing strategic perspective, business insights and solutions to customers from the initial ideation phase through final execution.<br></p>
       <p>Able to operate at both business and technical level in fast paced environments, with solid communication and presentation skills and a background cultivating relationships with clients at all levels and from very diverse backgrounds.<br></p>
       <p>Proactively communicating regular updates, trends and the impact of changes to all internal and external stakeholders, synthesizing feedback and adjusting plans accordingly.<br></p>
       <p>Coordinating diverse, cross-functional, remote, agile teams, implementing strategy and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
@@ -88,8 +88,7 @@
   <div class="jumbotron text-center">
     <p>
       <a href="#myJumbotron" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
-      <a href="#myStory" title="About me">&nbsp;&nbsp;About me&nbsp;&nbsp;</a>
-      <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;My Kaggle Profile&nbsp;&nbsp;</a>
+      <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;Kaggle&nbsp;&nbsp;</a>
       <a href="https://github.com/marcogdepinto" title="Progetti">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>
       <a href="#" title="Contatti">&nbsp;&nbsp;Contacts&nbsp;&nbsp;</a>
       <h6> © 2018 Marco Giuseppe de Pinto. All rights reserved. </h6>
