--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 <div class="container" id="whyContainer">
   <div class="row">
     <div class="col-sm-2" id="whyCoding">
-      <h4>Professional and Personal Skills</h4>
+      <h4>Skills</h4>
     </div>
     <div class="col-sm-10" id="whyCodingDescription">
-      <p>Professional skills:<br>
-         Business process consulting, process analysis and improvement, exploratory data analysis, business analysis, communication, negotiation, strategic thinking, product design, project management.<br></p>
-      <p>Technical skills:<br>
-         SQL, Python, Excel, Tableau, Javascript, Scikit-Learn, Pandas, Matplotlib, Numpy, Seaborn, Jupyter Notebook, Django, Kivy, MacOS, Linux, Ubuntu, Git, Pycharm.<br></p>
-      <p>Languages:<br>
+      <p><b>Web Development</b><br>
+         HTML, CSS, Javascript, Python (Django), Git<br></p>
+      <p><b>Big Data Analysis</b><br>
+         SQL, Python, Excel, Tableau, Scikit-Learn, Pandas, Matplotlib, Numpy, Seaborn, Jupyter Notebook<br></p>
+      <p><b>Languages</b><br>
          Italian, English (fluent, IELTS Academic 7 - 2015)<br></p>
       </p>
     </div>
