--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
 <div class="container" id="infoContainer">
   <div class="row">
     <div class="col-sm-2" id="aboutMeDescription">
-      <h4>About me</h4>
+      <h3>About me</h3>
     </div>
     <div class="col-sm-10" id="myStory">
-      <p>Leading complex digital transformation projects (500+ users in 8 EMEA – LATAM countries), providing strategic perspective, business insights and solutions to customers from the initial ideation phase through final execution.<br></p>
-      <p>Able to operate at both business and technical level in fast paced environments, with solid communication and presentation skills and a background cultivating relationships with clients at all levels and from very diverse backgrounds.<br></p>
-      <p>Proactively communicating regular updates, trends and the impact of changes to all internal and external stakeholders, synthesizing feedback and adjusting plans accordingly.<br></p>
-      <p>Coordinating diverse, cross-functional, remote, agile teams, implementing strategy and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
-      <p>Driving process improvements, consulting with cross-functional teams to understand needs and pain points related to tools and to solve workflow problems.<br></p>
+      <p>Leading digital transformation projects from the initial ideation through final execution, with an impact on 500+ users in 8 EMEA – LATAM countries.<br></p>
+      <p>Operating at both business and technical level in fast paced environments, with solid communication and presentation skills and a background cultivating relationships with clients from very diverse backgrounds.<br></p>
+      <p>Coordinating diverse, cross-functional agile teams, implementing strategy and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
       <p>Analyzing large, complex data sets and converting them into information to drive business decisions at all levels of the organization.<br></p>
       <p>Traveling across the world to collect product feedback and ideas: already visited customers in Italy, Brazil and Romania to overcome business challenges and identify new business opportunities.<br></p>
       <p>Creating metrics, reports and KPIs to evaluate the success and the pain points of the projects and to ensure control and operation of all areas.<br></p>
@@ -46,7 +44,7 @@
 <div class="container" id="whyContainer">
   <div class="row">
     <div class="col-sm-2" id="whyCoding">
-      <h4>Skills</h4>
+      <h3>Skills</h3>
     </div>
     <div class="col-sm-10" id="whyCodingDescription">
       <p><b>Web Development</b><br>
@@ -63,7 +61,7 @@
 <div class="container" id="projectsContainer">
   <div class="row">
     <div class="col-sm-2" id="projectsDescription">
-      <h4>Projects</h4>
+      <h3>Projects</h3>
     </div>
     <div class="col-sm-10" id="projectsStory">
       <p><a href="https://www.kaggle.com/marcogdepinto/titanic-with-python-first-competition">- Analysis of the Titanic dataset (actually top 6% in the Kaggle leaderboard).</a></p>
