--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       <h3>Skills</h3>
     </div>
     <div class="col-sm-10" id="whyCodingDescription">
-      <p><b>Web Development</b><br>
-         HTML, CSS, Javascript, Python (Django), Git<br></p>
       <p><b>Big Data Analysis</b><br>
          SQL, Python, Excel, Tableau, Scikit-Learn, Pandas, Matplotlib, Numpy, Seaborn, Jupyter Notebook<br></p>
+      <p><b>Web Development</b><br>
+         HTML, CSS, Javascript, Python (Django), Git<br></p>
       <p><b>Languages</b><br>
          Italian, English (fluent, IELTS Academic 7 - 2015)<br></p>
       </p>
@@ -82,8 +82,8 @@
   </div>
 </div>
 
-<div class="footer" style="background-color:white">
-  <div class="jumbotron text-center">
+<div class="panel-footer panel-custom" id="myFooter" style="background-color:white">
+  <div class="jumbotron text-center" style="background-color:white">
     <p>
       <a href="#myJumbotron" title="Home">&nbsp;&nbsp;Home&nbsp;&nbsp;</a>
       <a href="https://www.kaggle.com/marcogdepinto">&nbsp;&nbsp;Kaggle&nbsp;&nbsp;</a>
