--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
     <a href="https://twitter.com/marcogdepinto" title="Twitter"><i class="fa fa-twitter" style="font-size: 30px;"></i></a>
     <a href="https://github.com/marcogdepinto" title="Github"><i class="fa fa-github" style="font-size: 30px;"></i></a>
+    <a href="https://www.youtube.com/channel/UC6sZWF6eORBxlhetDyntZYg/featured?view_as=public" title="YouTube"><i class="fa fa-youtube" style="font-size: 30px;"></i></a>
   </p>
 </div>
 
