--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="jumbotron text-center" id="myJumbotron" style="background-color:white">
   <img src="assets/images/VAL_7302.JPG" class="img-responsive" alt="Pic" width="170" height="170" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
-  <p>Deputy Project Lead, Business Analyst and Customer Service at Wolters Kluwer</p>
+  <p>"I have no special talent. I am only passionately curious."</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
@@ -33,12 +33,12 @@
       <h3>About me</h3>
     </div>
     <div class="col-sm-10" id="myStory">
-      <p>Leading digital transformation projects from the initial ideation through final execution, with an impact on 500+ users in 8 EMEA – LATAM countries.<br></p>
-      <p>Operating at both business and technical level in fast paced environments, with solid communication and presentation skills and a background cultivating relationships with clients from very diverse backgrounds.<br></p>
-      <p>Coordinating diverse, cross-functional agile teams, implementing strategy and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
-      <p>Analyzing large, complex data sets and converting them into information to drive business decisions at all levels of the organization.<br></p>
-      <p>Traveling across the world to collect product feedback and ideas: already visited customers in Italy, Brazil and Romania to overcome business challenges and identify new business opportunities.<br></p>
-      <p>Creating metrics, reports and KPIs to evaluate the success and the pain points of the projects and to ensure control and operation of all areas.<br></p>
+      <p>Working in a multinational company on digital transformation projects with an impact on 500+ users in 8 EMEA – LATAM countries, from the initial ideation through final execution, <br></p>
+      <p>Operating at both business and technical level in fast paced environments, with solid communication and presentation skills and a background cultivating relationships with stakeholders from very diverse backgrounds.<br></p>
+      <p>Coordinating diverse, cross-functional teams, definining plans and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
+      <p>Analyzing large, complex data sets to collect information, create metrics and reports and drive business decisions at all levels of the organization.<br></p>
+      <p>Traveling across the world to roll out projects and collect product feedback: already visited customers in Italy, Brazil and Romania.<br></p>
+      <p>Sharing knowledge using social media to instill curiosity and help non-tech people understand that IT (coding, in particular) is simple and beautiful.<br></p>
     </div>
   </div>
 </div>
