--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="jumbotron text-center" id="myJumbotron" style="background-color:white">
   <img src="assets/images/VAL_7302.JPG" class="img-responsive" alt="Pic" width="170" height="170" id="myImg">
   <h1>Marco Giuseppe de Pinto</h1>
-  <p>"I have no special talent. I am only passionately curious."</p>
+  <p>"I have no special talent: I am only passionately curious."</p>
   <p>
     <a href="mailto:marcog.depinto@gmail.com" title="Gmail"><i class="fa fa-envelope" style="font-size: 30px;"></i></a>
     <a href="https://www.linkedin.com/in/marcogdepinto/" title="LinkedIn"><i class="fa fa-linkedin" style="font-size: 30px;"></i></a>
