--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h3>About me</h3>
     </div>
     <div class="col-sm-10" id="myStory">
-      <p>Working in a multinational company on digital transformation projects with an impact on 500+ users in 8 EMEA – LATAM countries, from the initial ideation through final execution, <br></p>
+      <p>Working in a multinational company on digital transformation projects, with an impact on 500+ users in 8 EMEA – LATAM countries, from the initial ideation through final execution, <br></p>
       <p>Operating at both business and technical level in fast paced environments, with solid communication and presentation skills and a background cultivating relationships with stakeholders from very diverse backgrounds.<br></p>
       <p>Coordinating diverse, cross-functional teams, definining plans and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
       <p>Analyzing large, complex data sets to collect information, create metrics and reports and drive business decisions at all levels of the organization.<br></p>
