--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <p>Coordinating diverse, cross-functional teams, definining plans and setting goals with the aim of maintaining productivity while working through challenging deadlines.<br></p>
       <p>Analyzing large, complex data sets to collect information, create metrics and reports and drive business decisions at all levels of the organization.<br></p>
       <p>Traveling across the world to roll out projects and collect product feedback: already visited customers in Italy, Brazil and Romania.<br></p>
-      <p>Using social media to instill curiosity about coding.<br></p>
+      <p>Using social media to instill curiosity about how simple and beautiful coding is.<br></p>
     </div>
   </div>
 </div>
